--- a/Dockerfile.maplab.vnc
+++ b/Dockerfile.maplab.vnc
@@ -1,6 +1,6 @@
 # This Dockerfile is used to build an headles vnc image based on Ubuntu
 
-FROM ubuntu:16.04
+FROM ros:kinetic
 
 MAINTAINER Simon Hofmann "simon.hofmann@consol.de"
 ENV REFRESHED_AT 2018-10-29
@@ -37,13 +37,14 @@ ADD ./src/common/install/ $INST_SCRIPTS/
 ADD ./src/ubuntu/install/ $INST_SCRIPTS/
 RUN find $INST_SCRIPTS -name '*.sh' -exec chmod a+x {} +
 
-RUN $INST_SCRIPTS/maplab.sh
+RUN $INST_SCRIPTS/maplab_from_ros.sh
 RUN $INST_SCRIPTS/maplab_additions.sh
-RUN $INST_SCRIPTS/vs_code_install.sh
 RUN $INST_SCRIPTS/oh-my-zsh.sh
 RUN $INST_SCRIPTS/ssh.sh
 ENV SSH_PORT=22
 EXPOSE $SSH_PORT
+RUN $INST_SCRIPTS/pangolin.sh
+RUN $INST_SCRIPTS/vs-code.sh
 
 ### Install some common tools
 RUN $INST_SCRIPTS/tools.sh
@@ -68,6 +69,8 @@ ADD ./src/common/xfce/ $HOME/
 RUN $INST_SCRIPTS/libnss_wrapper.sh
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
+
+RUN echo ". /opt/ros/$ROS_VERSION/setup.bash" >> ~/.bashrc
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
 CMD ["--wait"]
