--- a/Dockerfile.maplab.vnc
+++ b/Dockerfile.maplab.vnc
@@ -71,9 +71,8 @@ RUN $INST_SCRIPTS/libnss_wrapper.sh
 ADD ./src/common/scripts $STARTUPDIR
 RUN $INST_SCRIPTS/set_user_permission.sh $STARTUPDIR $HOME
 
-RUN rosdep init
 RUN rosdep update
-RUN echo ". /opt/ros/$ROS_VERSION/setup.bash" >> ~/.bashrc
+RUN echo "source /opt/ros/$ROS_VERSION/setup.zsh" >> ~/.zshrc
 
 ENTRYPOINT ["/dockerstartup/vnc_startup.sh"]
 CMD ["--wait"]
