--- a/Dockerfile.maplab.vnc
+++ b/Dockerfile.maplab.vnc
@@ -40,8 +40,8 @@ RUN $INST_SCRIPTS/tools.sh
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
 RUN $INST_SCRIPTS/oh-my-zsh.sh
-RUN $INST_SCRIPTS/qtcreator.sh
-RUN $INST_SCRIPTS/gtest.sh
+# RUN $INST_SCRIPTS/qtcreator.sh
+# RUN $INST_SCRIPTS/gtest.sh
 RUN $INST_SCRIPTS/maplab_from_ros.sh
 RUN $INST_SCRIPTS/maplab_additions.sh
 RUN $INST_SCRIPTS/ssh.sh
